# purr

./: .gitignore  Cargo.toml  README.md
purrmitive/: Cargo.toml  LICENSE  README.md
purrmitive-ffi/: Cargo.toml  README.md  build.rs
purrmitive-ffi/src/: lib.rs
purrmitive/src/: lib.rs
purrmitive/src/core/: algo.rs  hill_climb.rs  mod.rs
purrmitive/src/graphics/: circle.rs  mod.rs  point.rs  raster.rs  rectangle.rs  scanline.rs  triangle.rs
src/: lib.rs
src/core/: algo.rs  hill_climb.rs  mod.rs  worker.rs
src/graphics/: bresenham.rs  circle.rs  combo.rs  ellipse.rs  mod.rs  point.rs  polygon.rs  quadratic.rs  raster.rs  rectangle.rs  scanline.rs  triangle.rs
