[package]
name = "purr"
version = "0.1.0"
authors = ["chux0519 <chuxdesign@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.8"
rand = {version = "0.7.3", features = ["small_rng"]}
rand_distr = "0.2.2"
crossbeam-channel = "0.4"
threadpool = "1.0"
num_cpus = "1.0"
nsvg = "0.5.1"
clap = {version = "2.33.1", optional = true}

[features]
cli = ["clap"]

[[bin]]
name = "purr"
required-features = ["cli"]

