[package]
name = "purrmitive-ffi"
version = "0.1.0"
authors = ["chux0519 <chuxdesign@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
purrmitive = { path = "../purrmitive" }
log = "0.4"
env_logger="0.7.1"
once_cell="1.5.2"
num_cpus = "1.0"


[lib]
name = "purrmitive_ffi"
crate-type = ["staticlib", "cdylib"]

[build-dependencies]
cbindgen = "0.20"
